re PR c++/49251 ([C++0x][parameter pack expanding] unused parameter warning with unpacking empty tuples)

PR c++/49251
	* semantics.c (finish_id_expression): Mark even dependent
	variables as used.

From-SVN: r175130